--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ compile_commands.json
 !makefile_base_posix.mak
 !sourcesdk_def.mak
 mp/game/mod_sdk2013ce/CSCEBinary.zip
+/mp/game/mod_sdk2013ce/maps/graphs/de_mirage.ain
